# discord-train-logger

./: README.md  pyproject.toml
discord_train_logger/: __init__.py  embed.py  notifier.py  webhook.py
